--- a/raport/pages/wprowadzenie/wprowadzenie.tex
+++ b/raport/pages/wprowadzenie/wprowadzenie.tex
@@ -1,33 +1,25 @@
 \section{Wprowadzenie}
 
-Obserwując rynek i możemy zauważyć ciągły wzrost urządzeń, będących coraz bardziej inteligentnych
-i odpornych na ciągle zmieniające się otoczenie. 
+Obserwując rynek możemy zauważyć ciągły wzrost liczby urządzeń będących coraz bardziej inteligentnych
+i odpornych na ciągle zmieniające się otoczenie.
 
-Celem projektu inżynierskiego jest zbudowanie robota śledzącego poprzez kamerę wskazany obiekt.
+Celem projektu inżynierskiego jest zbudowanie robota śledzącego wskazany obiekt, który jest wykryty przez zamontowaną na nim kamerę.
 Robot będzie sterowany przez komputer przetwarzający obraz przy pomocy odpowiednio wytrenowanej
-głębokiej sieci neuronowej. Zadaniem sieci będzie rozpoznanie i zlokalizowanie wyznaczonego obiektu
-a następnie przekazanie jego pozycji na obrazie dalej do algorytmu. Dalsza część programu
-wyślę odpowiednio spreparowane komendy do robota aby ten ustawił się na obiektem.
+głębokiej sieci neuronowej. Zadaniem sieci będzie rozpoznanie i zlokalizowanie wyznaczonego obiektu, 
+a następnie przekazanie jego pozycji algorytmu sterującego. Dalsza część programu
+wyśle odpowiednio spreparowane komendy do robota, aby ten ustawił karetkę z kamerą na obiektem.
 
 Głównym powodem realizacji takiego tematu jest chęć poznania działania i trenowania głębokich sieci 
 neuronowych rozpoznających obiekty na obrazach.
 
 \textbf{Omówienie rozdziałów}
 
-
-Rozdział pierwszy - omawia działanie głębokich sieci neuronowych
-
-
-Rozdział drugi - przegląd literatury 
-
-
-Rozdział trzeci - zawiera opis procesu trenowania sieci rozpoznającej wskazany obiekt
-
-
-Rozdział czwarty - opisuje realizacje pozostałej części programu 
-
-Rozdział piąty - przedstawia modyfikacje i komunikacje z wykorzystanym robotem 
-odpowiadającym za przemieszczenie kamery. 
-
-Rozdział szósty - przedstawia przeprowadzone opis i wyniki przeprowadzonych testów,
-różne warunki pracy algorytmu.
+Mając na uwadze zakres pracy i cel projektu, jej treść podzielono na szereg rozdziałów. 
+Rozdział pierwszy ogólnie omawia typy i zasadę działania sieci neuronowych. 
+Rozdział drugi skupia się na przeglądzie literatury, a w szczególności na opisie istniejących rozwiązań
+wykorzystujących rozpoznawanie obiektów przy pomocy głębokiej sieci neuronowej.
+Rozdział trzeci szczegółowo omawia proces budowy wykorzystywanego dalej robota.
+Rozdział czwarty opisuje proces pozyskania danych i trenowania sieci rozpoznającej obiekty.
+Rozdział piąty omawia utworzony program wykorzystujący wytrenowaną sieć neuronową, cały proces sterowania i 
+sposób połączenia wszystkich systemów w działający projekt.
+Ostatni rozdział przedstawia testy finalnej wersji programu oraz ich krótki opis. 
