--- a/raport/raport.tex
+++ b/raport/raport.tex
@@ -10,7 +10,7 @@
 
 \documentclass[12pt,twoside]{article}
 
-\usepackage{weiiszablon}
+\usepackage{raport}
 
 \author{Damian Bielecki}
 
@@ -55,19 +55,31 @@
 
 \include{pages/teoria/teoria}
 
+\include{pages/opisRozwiazania/opisRozwiazania}
+
+\include{pages/dodatekARobot/dodatekA}
+
+\include{pages/uczenie/uczenie}
+
+\include{pages/siecIRobot/siecIRobot}
+
+\include{pages/testy/testy}
+
+\include{pages/podsumowanie/podsumowanie}
 
 
 \clearpage
-
 \addcontentsline{toc}{section}{Literatura}
 \begin{thebibliography}{4}
-    \bibitem{sztucznyNeuron} https://batmaja.com/sztuczny-neuron/ Dostęp 07.01.2023
-    \bibitem{schematAISite} https://www.v7labs.com/blog/machine-learning-guide Dostęp 07.01.2023
-% \bibitem{str} http://weii.portal.prz.edu.pl/pl/materialy-do-pobrania. Dostęp 5.01.2015.
+	\bibitem{sztucznyNeuron} https://batmaja.com/sztuczny-neuron/ Dostęp: 07.01.2023 
+	\bibitem{schematAISite} https://www.v7labs.com/blog/machine-learning-guide Dostęp: 07.01.2023 
+	\bibitem{matlabDetekcjaPrzyklad} https://www.mathworks.com/help/vision/ug/object-detection-using-yolov4-deep-learning.html Dostęp: 26.01.2023 
+	\bibitem{rcnnAndFRCNNTowards} https://towardsdatascience.com/r-cnn-fast-r-cnn-faster-r-cnn-yolo-object-detection-algorithms-36d53571365e Dostęp: 06.06.2023 
+	\bibitem{yoloV3ArtAutora} Joseph Redmon, Ali Farhadi "YOLOv3: An Incremental Improvement", University of Washington 2018 
+	\bibitem{yoloAndMobileRobot}Douglas Henke Dos Reis,  Mobile Robot Navigation Using an Object Recognition Software with RGBD Images and the YOLO Algorithm DOI: 10.1080/08839514.2019.1684778
+	\bibitem{grblGithub} Projekt grbl, https://github.com/gnea/grbl/ Dostęp 08.06.2023r 
+	\bibitem{matlabOYolov4} https://www.mathworks.com/help/vision/ug/getting-started-with-yolo-v4.html Dostęp 04.06.2023 
 \end{thebibliography}
 
 \clearpage
-
-% \makesummary
-
 \end{document} 
